<resources>
    <string name="app_name">TGP101 02 Allen</string>
    <string name="name_null">Name is Empty</string>
    <string name="search_name">Search Name</string>
    <string name="create_new">Create New File</string>
    <string name="modify_file">Modify file</string>
    <string name="save">save</string>
    <string name="file_nodata">File no Data</string>
    <string name="delete">Delete Successful</string>
    <string name="name_nofind">No Find!</string>
    <string name="textEmail">Email</string>
    <string name="textPassWord">Password</string>
    <string name="textNickname">NickName</string>
    <string name="textRegisterHint">Continue with google</string>
    <string name="textCheckEmailPasswordEmpty">Email or password is empty</string>
    <string name="textCheckNicknameEmpty">Nickname is empty</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="textPhone">Phone Number</string>
    <string name="phone">phone</string>
    <string name="cloud">cloud</string>
    <string name="title">Photos Name</string>
    <string name="describe">describe</string>
    <string name="FileisNull">FileName is null.</string>
    <string name="nofile">NO File</string>
    <string name="synccloud">SyncCloud</string>
    <string name="tosignUp">To Sign Up</string>
    <string name="textNoImagePickerAppFound">no image picker app found</string>
    <string name="leaderboard">leaderboard</string>
    <string name="views">views</string>
    <string name="click">click</string>
    <string name="addcommnet">add a commnet...</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_name">default_channel_name</string>

</resources>