<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment" >


    <EditText
        android:id="@+id/etEmail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/textEmail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/textPassWord"
        app:layout_constraintEnd_toEndOf="@+id/etEmail_login"
        app:layout_constraintStart_toStartOf="@+id/etEmail_login"
        app:layout_constraintTop_toBottomOf="@+id/etEmail_login" />

    <ImageView
        android:id="@+id/ivEmail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:src="@drawable/baseline_email_black_24"
        app:layout_constraintBottom_toBottomOf="@+id/etEmail_login"
        app:layout_constraintEnd_toStartOf="@+id/etEmail_login"
        app:layout_constraintTop_toTopOf="@+id/etEmail_login" />

    <ImageView
        android:id="@+id/ivPhone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:src="@drawable/baseline_phone_black_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhoneNember"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhoneNember"
        app:layout_constraintTop_toTopOf="@+id/editTextPhoneNember" />

    <ImageView
        android:id="@+id/ivNickname_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/baseline_account_circle_black_24"
        app:layout_constraintBottom_toBottomOf="@+id/etNickName_login"
        app:layout_constraintEnd_toStartOf="@+id/etNickName_login"
        app:layout_constraintTop_toTopOf="@+id/etNickName_login" />

    <EditText
        android:id="@+id/editTextPhoneNember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/textPhone"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPassWord"
        app:layout_constraintStart_toStartOf="@+id/etPassWord"
        app:layout_constraintTop_toBottomOf="@+id/etPassWord" />

    <EditText
        android:id="@+id/etNickName_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/textNickname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneNember"
        app:layout_constraintStart_toStartOf="@+id/editTextPhoneNember"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

    <TextView
        android:id="@+id/tvMessage_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogleSignIn"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/ivGoogleSignIn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/common_google_signin_btn_icon_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterHint_login" />

    <TextView
        android:id="@+id/tvRegisterHint_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textRegisterHint"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNickName_login" />

    <TextView
        android:id="@+id/tvHintSymbol_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="*"
        android:textColor="@color/mygreen"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/etEmail_login"
        app:layout_constraintStart_toEndOf="@+id/etEmail_login"
        app:layout_constraintTop_toTopOf="@+id/etEmail_login" />

    <TextView
        android:id="@+id/tvHintSymbol_EmailUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textColor="?attr/colorError"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHintSymbol_Email"
        app:layout_constraintStart_toEndOf="@+id/tvHintSymbol_Email"
        app:layout_constraintTop_toTopOf="@+id/tvHintSymbol_Email" />

    <TextView
        android:id="@+id/tvHintSymbol_PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="*"
        android:textColor="@color/mygreen"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/etPassWord"
        app:layout_constraintStart_toEndOf="@+id/etPassWord"
        app:layout_constraintTop_toTopOf="@+id/etPassWord" />

    <TextView
        android:id="@+id/tvHintSymbol_PassWordUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textColor="?attr/colorError"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHintSymbol_PassWord"
        app:layout_constraintStart_toEndOf="@+id/tvHintSymbol_PassWord"
        app:layout_constraintTop_toTopOf="@+id/tvHintSymbol_PassWord" />

    <TextView
        android:id="@+id/tvEmailHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textColor="@color/mygreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btSignUp"
        app:layout_constraintTop_toTopOf="@+id/btSignUp" />

    <TextView
        android:id="@+id/tvHintSymbol_NicknameUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textColor="?attr/colorError"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/etNickName_login"
        app:layout_constraintStart_toEndOf="@+id/etNickName_login"
        app:layout_constraintTop_toTopOf="@+id/etNickName_login"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvNickNameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="?attr/colorError"
        app:layout_constraintEnd_toEndOf="@+id/tvEmailHint"
        app:layout_constraintStart_toStartOf="@+id/tvEmailHint"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailHint" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/mygreen"
        android:text="@string/signIn"
        app:layout_constraintStart_toStartOf="@+id/editTextPhoneNember"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNember" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneNember"
        app:layout_constraintStart_toEndOf="@+id/btSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNember" />

    <ImageView
        android:id="@+id/ivGoogleSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/common_google_signin_btn_icon_light_normal"
        app:layout_constraintBottom_toBottomOf="@+id/etNickName_login"
        app:layout_constraintStart_toEndOf="@+id/tvHintSymbol_NicknameUp"
        app:layout_constraintTop_toTopOf="@+id/etNickName_login" />


</androidx.constraintlayout.widget.ConstraintLayout>