<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GoogleSignUpFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#736A6F"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btSignUp_google"
        app:layout_constraintEnd_toStartOf="@+id/btSignUp_google"
        app:layout_constraintTop_toTopOf="@+id/btSignUp_google">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/ibBack_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:src="@drawable/baseline_arrow_back_black_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHintSymbol_EmailUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="*"
        android:textColor="?attr/colorError"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/etNickName_google"
        app:layout_constraintStart_toEndOf="@+id/etNickName_google"
        app:layout_constraintTop_toTopOf="@+id/etNickName_google" />

    <EditText
        android:id="@+id/etNickName_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/textNickname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/ivNickname_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/baseline_account_circle_black_24"
        app:layout_constraintEnd_toStartOf="@+id/etNickName_google"
        app:layout_constraintTop_toTopOf="@+id/etNickName_google" />

    <ImageView
        android:id="@+id/ivPhone_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:src="@drawable/baseline_phone_black_24"
        app:layout_constraintBottom_toBottomOf="@+id/etPhoneNember_google"
        app:layout_constraintEnd_toStartOf="@+id/etPhoneNember_google"
        app:layout_constraintTop_toTopOf="@+id/etPhoneNember_google" />

    <EditText
        android:id="@+id/etPhoneNember_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/textPhone"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/etNickName_google"
        app:layout_constraintStart_toStartOf="@+id/etNickName_google"
        app:layout_constraintTop_toBottomOf="@+id/etNickName_google" />

    <Button
        android:id="@+id/btSignUp_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNember_google" />

    <Button
        android:id="@+id/btSignIn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/mygreen"
        android:text="@string/signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogleTitle_Up" />

    <ImageView
        android:id="@+id/ivGoogleTitle_Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/google_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signUp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn_google" />

    <TextView
        android:id="@+id/tvMessage_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignUp_google"
        tools:text="TextView" />
</androidx.constraintlayout.widget.ConstraintLayout>